# mtlearn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  notebooks.yml  package.yml  release.yml
cmake/: mtlearnConfig.cmake.in
docs/: development.md  installation.md
mtlearn/bindings/: CMakeLists.txt  MtlearnModule.cpp
mtlearn/bindings/cfp/: TreeTensorsBinding.hpp  TreeTraversalBinding.hpp
mtlearn/bindings/morphology/: AttributeBinding.hpp  AttributeFiltersBinding.hpp  BindingSupport.hpp  WeightedTreeBinding.hpp
mtlearn/include/mtlearn/: morphology.hpp
mtlearn/include/mtlearn/detail/: morphology_backend.hpp
mtlearn/python/mtlearn/: __init__.py  _native.py  data.py  datasets.py  morphology.py
mtlearn/python/mtlearn/_backends/: __init__.py  _mtlearn.py
mtlearn/python/mtlearn/layers/: ConnectedFilterPreprocessingLayer.py  ConnectedFilterPreprocessingLayerWithCPUTreeTraversal.py  ConnectedFilterPreprocessingLayerWithExplicitJacobian.py  __init__.py  _helpers.py
mtlearn/src/: CMakeLists.txt
mtlearn/src/mtlearn/: morphology.cpp
mtlearn/src/mtlearn/cfp/: tree_tensors.hpp  tree_traversal.hpp
mtlearn/tests/: CMakeLists.txt
mtlearn/tests/cmake/: installed_consumer_test.cmake
mtlearn/tests/cpp/: public_morphology.cpp  test_interpreter.cpp
mtlearn/tests/python/: test_bindings.py  test_cfp_cache.py  test_cfp_deterministic.py  test_cfp_validation.py  test_data.py  test_gradchecks.py  test_morphology_api.py
notebooks/ICPR2026/: Exp_plants_segmentation_ConvNet_run_000.ipynb  Exp_plants_segmentation_ID3-NN_run_000.ipynb  Exp_plants_segmentation_Unet_run_000.ipynb  Exp_screws_segmentation_ConvNet_run_000.ipynb  Exp_screws_segmentation_ID3-NN_run_000.ipynb  Exp_screws_segmentation_Unet_run_000.ipynb  README.md
notebooks/experiments/: Example_screws_filtering.ipynb
notebooks/gradchecks/: GradCheck_Implicit_Jacobian.ipynb  GradCheck_Jacobian.ipynb  GradCheck_Tree.ipynb  GradCheck_TreeOfShapes.ipynb
scripts/: download_data.py  install_release_dependencies.py  smoke_test_release.py  validate_notebooks.py
