[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=3.0.1",
  "setuptools-scm>=8",
  "torch>=2.2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
  "torch>=2.8,<2.9; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.10'",
  "torch>=2.9,<2.12; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.10' and python_version < '3.14'",
  "torch>=2.11,<2.12; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.14'",
  "torch>=2.8,<2.9; sys_platform != 'darwin' and python_version < '3.10'",
  "torch>=2.9,<2.12; sys_platform != 'darwin' and python_version >= '3.10' and python_version < '3.14'",
  "torch>=2.11,<2.12; sys_platform != 'darwin' and python_version >= '3.14'"
]
build-backend = "scikit_build_core.build"

[project]
name = "mtlearn"
version = "1.0.3"
description = "Morphological tree learning utilities with a stable morphology facade"
readme = "README.md"
authors = [{ name = "Wonder Alexandre Luz Alves", email = "worderalexandre@gmail.com" }]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "numpy>=1.23",
  "opencv-python-headless>=4.8",
  "scikit-learn>=1.2",
  "torch>=2.2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version < '3.13'",
  "torch>=2.8,<2.9; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version < '3.10'",
  "torch>=2.9,<2.12; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.10' and python_version < '3.14'",
  "torch>=2.11,<2.12; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.14'",
  "torch>=2.8,<2.9; sys_platform != 'darwin' and python_version < '3.10'",
  "torch>=2.9,<2.12; sys_platform != 'darwin' and python_version >= '3.10' and python_version < '3.14'",
  "torch>=2.11,<2.12; sys_platform != 'darwin' and python_version >= '3.14'"
]

[project.urls]
Source = "https://github.com/wonderalexandre/mtlearn"
Issues = "https://github.com/wonderalexandre/mtlearn/issues"

[project.optional-dependencies]
notebooks = [
  "ipykernel",
  "matplotlib",
  "nbformat>=5",
  "papermill>=2.4"
]
test = [
  "pytest>=8"
]

[tool.pytest.ini_options]
testpaths = ["mtlearn/tests/python"]
markers = [
  "gradcheck: numerical gradient checks for custom autograd functions",
  "integration: tests that require the native extension and Torch",
  "slow: tests that are slower than ordinary unit tests",
  "cuda: tests that require a CUDA-capable runtime"
]

[tool.scikit-build]
wheel.packages = ["mtlearn/python/mtlearn"]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.cmake.define]
MTLEARN_BUILD_TESTS = "OFF"
MTLEARN_ENABLE_EMBED = "OFF"
MTLEARN_ENABLE_ASSERTS = "OFF"
MTLEARN_WITH_TORCH = "ON"
MMCFILTERS_BUILD_PYTHON = "OFF"

[tool.scikit-build.sdist]
include = [
  "/CMakeLists.txt",
  "/cmake/**",
  "/mtlearn/include/**",
  "/mtlearn/src/**",
  "/mtlearn/bindings/CMakeLists.txt",
  "/mtlearn/bindings/*.cpp",
  "/mtlearn/bindings/*.hpp",
  "/mtlearn/bindings/cfp/*.hpp",
  "/mtlearn/bindings/morphology/*.hpp",
  "/mtlearn/python/**/*.py",
  "/mtlearn/tests/CMakeLists.txt",
  "/mtlearn/tests/cmake/*.cmake",
  "/mtlearn/tests/cpp/*.cpp",
  "/mtlearn/tests/python/*.py",
  "/scripts/*.py",
  "/docs/installation.md",
  "/external/MorphologicalAttributeFilters/CMakeLists.txt",
  "/external/MorphologicalAttributeFilters/LICENSE",
  "/external/MorphologicalAttributeFilters/README.md",
  "/external/MorphologicalAttributeFilters/cmake/**",
  "/external/MorphologicalAttributeFilters/mmcfilters/**",
  "/external/MorphologicalAttributeFilters/pybinds/*.hpp",
  "/LICENSE",
  "/README.md"
]
exclude = [
  ".gitignore",
  ".gitmodules",
  "dat/**",
  "notebooks/**",
  "build/**",
  "docs/source-layout-refactoring-plan.md",
  "external/MorphologicalAttributeFilters/.git",
  "external/MorphologicalAttributeFilters/.git/**",
  "external/MorphologicalAttributeFilters/.github/**",
  "external/MorphologicalAttributeFilters/.gitignore",
  "external/MorphologicalAttributeFilters/.vscode/**",
  "external/MorphologicalAttributeFilters/MANIFEST.in",
  "external/MorphologicalAttributeFilters/dat/**",
  "external/MorphologicalAttributeFilters/docs/**",
  "external/MorphologicalAttributeFilters/examples/**",
  "external/MorphologicalAttributeFilters/examples/CMakeLists.txt",
  "external/MorphologicalAttributeFilters/external/**",
  "external/MorphologicalAttributeFilters/notebooks/**",
  "external/MorphologicalAttributeFilters/notebooks/README.md",
  "external/MorphologicalAttributeFilters/old_setup.py",
  "external/MorphologicalAttributeFilters/pybind11.cmake",
  "external/MorphologicalAttributeFilters/pybinds/mmcfilters.cpp",
  "external/MorphologicalAttributeFilters/pyproject.toml",
  "external/MorphologicalAttributeFilters/python/**",
  "external/MorphologicalAttributeFilters/unit-tests/**",
  "external/MorphologicalAttributeFilters/unit-tests/CMakeLists.txt",
  "**/.ipynb_checkpoints/**",
  "**/.ipynb_checkpoints",
  "mtlearn/python/**/__pycache__/**",
  "mtlearn/python/**/__pycache__",
  "mtlearn/python/**/*.py[cod]",
  "**/__pycache__/**",
  "**/__pycache__",
  "**/*.py[cod]"
]
